<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"> <!-- Set background color -->

    <!-- Success Icon -->
    <ImageView
        android:id="@+id/iv_success_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_success"
    app:tint="@color/iconColorSecondary"
    android:contentDescription="@string/description_success_icon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/tv_success_message"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="72dp"/>

    <!-- Success Message -->
    <TextView
        android:id="@+id/tv_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waste_disposed_successfully"
    android:textSize="34sp"
    android:textColor="@android:color/white"
    android:textStyle="bold"
    android:gravity="center"
    android:padding="16dp"
    app:layout_constraintTop_toBottomOf="@id/iv_success_icon"
    app:layout_constraintBottom_toTopOf="@+id/btn_return_home"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Return to Home Button -->
    <Button
        android:id="@+id/btn_return_home"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:text="@string/return_to_home"
    android:backgroundTint="@color/Button2BackgroundColor"
    android:textColor="@color/textColorPrimary"
    android:textStyle="bold"
    android:padding="12dp"
        app:cornerRadius="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_success_message"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
